# krw-autotrader1118

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
autotrader-app/: requirements.txt
autotrader-app/backend/: __init__.py  model.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
scripts/: export_to_desktop.sh
tests/: test_model.py
